--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="">
+  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous"> -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/vendor.min.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/css/theme.min.css">
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
