--- a/public/index.html
+++ b/public/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <meta
+      name="keywords"
+      content="venture, garden, academy, education,skills,Learn,Interview,Resume,Prep,Internship,Certificate,Programs,business,analyst,UI/UX"
+    />
+    <meta name="author" content="Ogugua Tochukwu for Venture garden group" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendor.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/theme.min.css" />
 
-<head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/icon.png" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendor.min.css">
-  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/theme.min.css">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>Garden Academy</title>
+  </head>
 
-  <title>React App</title>
-</head>
-
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <div style="display: none">
+      * Edutech Project <br />
+      * Done By Satowind (Ogugua Tochukwu) <br />
+      * 08038385263, Evensatowind@gmail.com <br />
+      *Satoseries (Web app and mobile App engineering) <br />* For Ventures
+      Garden Group
+    </div>
+  </body>
 </html>
