--- a/public/index.html
+++ b/public/index.html
@@ -1,61 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/icon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <meta
-      name="keywords"
-      content="venture, garden, academy, education,skills,Learn,Interview,Resume,Prep,Internship,Certificate,Programs,business,analyst,UI/UX"
-    />
-    <meta name="author" content="Ogugua Tochukwu for Venture garden group" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendor.min.css" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/theme.min.css" />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/icon.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+  <meta name="keywords"
+    content="venture, garden, academy, education,skills,Learn,Interview,Resume,Prep,Internship,Certificate,Programs,business,analyst,UI/UX" />
+  <meta name="author" content="Ogugua Tochukwu for Venture garden group" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+  <link rel="stylesheet" href="" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/vendor.min.css" />
+  <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/theme.min.css" />
 
-    <title>Garden Academy</title>
-  </head>
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <div style="display: none">
-      * Edutech Project <br />
-      * Done By Satowind (Ogugua Tochukwu) <br />
-      * 08038385263, Evensatowind@gmail.com <br />
-      *Satoseries (Web app and mobile App engineering) <br />* For Ventures
-      Garden Group
-    </div>
-    <script type="text/javascript">
-      var Tawk_API = Tawk_API || {},
-        Tawk_LoadStart = new Date();
+  <title>Garden Academy</title>
+</head>
 
-      (function () {
-        var s1 = document.createElement("script"),
-          s0 = document.getElementsByTagName("script")[0];
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <div style="display: none">
+    * Edutech Project <br />
+    * Done By Satowind (Ogugua Tochukwu) <br />
+    * 08038385263, Evensatowind@gmail.com <br />
+    *Satoseries (Web app and mobile App engineering) <br />* For Ventures
+    Garden Group
+  </div>
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {},
+      Tawk_LoadStart = new Date();
 
-        s1.async = true;
+    (function () {
+      var s1 = document.createElement("script"),
+        s0 = document.getElementsByTagName("script")[0];
 
-        s1.src = "https://embed.tawk.to/60472f891c1c2a130d667d05/1f0b13dc1";
+      s1.async = true;
 
-        s1.charset = "UTF-8";
+      s1.src = "https://embed.tawk.to/60472f891c1c2a130d667d05/1f0b13dc1";
 
-        s1.setAttribute("crossorigin", "*");
+      s1.charset = "UTF-8";
 
-        s0.parentNode.insertBefore(s1, s0);
-      })();
-    </script>
-  </body>
+      s1.setAttribute("crossorigin", "*");
+
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+</body>
+
 </html>
